python/testData/highlighting/assignmentTargetWith.py
with open("") as <error descr="can't assign to operator">my_<<var</error>:
    pass